force-app/main/default/objects/ShippingFee__c/ShippingFee__c.object-meta.xml
<CustomObject>
    <label>Shipping Fee</label>
    <nameField>
        <label>Shipping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>