force-app/main/default/objects/ShippingFee__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Shipping Fees</relationshipLabel>
    <relationshipName>Shipping_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>