force-app/main/default/objects/ShippingFee__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Shipping Fees</relationshipLabel>
    <relationshipName>Shipping_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>