force-app/main/default/objects/ShippingFee__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Shipping Fees</relationshipLabel>
    <relationshipName>Shipping_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>