force-app/main/default/objects/ShippingFee__c/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Hierarchy</label>
    <referenceTo>ProductHierarchy__c</referenceTo>
    <relationshipLabel>Shipping Fees</relationshipLabel>
    <relationshipName>Shipping_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>