force-app/main/default/objects/ShippingFee__c/validationRules/ValidateCity.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateCity</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK( City__c ) &amp;&amp; ISBLANK( State__c ) &amp;&amp; ISBLANK( Country__c )) || (NOT(ISBLANK( City__c )) &amp;&amp; (NOT(ISBLANK( State__c )) || NOT(ISBLANK( Country__c ))))</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>City must be filled in IF AND ONLY IF neither State and Country are filled in.</errorMessage>
</ValidationRule>