force-app/main/default/objects/ShippingFee__c/validationRules/ValidateProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateProduct</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Product__c) &amp;&amp; ISBLANK(ProductHierarchy__c)) ||
(NOT(ISBLANK(Product__c)) &amp;&amp; NOT(ISBLANK(ProductHierarchy__c)))</errorConditionFormula>
    <errorMessage>Please fill in either Product or Product Hierarchy, not none and not both.</errorMessage>
</ValidationRule>